--- a/web-app/package.json
+++ b/web-app/package.json
@@ -10,6 +10,7 @@
         "react-dom": "^17.0.1",
         "react-scripts": "4.0.3",
         "react-three-fiber": "^5.3.20",
+        "tailwindcss": "^2.0.4",
         "three": "^0.126.1",
         "web-vitals": "^1.1.1"
     },
