--- a/web-app/package.json
+++ b/web-app/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@craco/craco": "^6.1.1",
         "@testing-library/jest-dom": "^5.11.9",
         "@testing-library/react": "^11.2.5",
         "@testing-library/user-event": "^12.8.3",
@@ -10,14 +11,13 @@
         "react-dom": "^17.0.1",
         "react-scripts": "4.0.3",
         "react-three-fiber": "^5.3.20",
-        "tailwindcss": "^2.0.4",
         "three": "^0.126.1",
         "web-vitals": "^1.1.1"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
+        "start": "craco start",
+        "build": "craco build",
+        "test": "craco test",
         "eject": "react-scripts eject"
     },
     "eslintConfig": {
@@ -39,6 +39,8 @@
         ]
     },
     "devDependencies": {
+        "@tailwindcss/postcss7-compat": "^2.0.4",
+        "autoprefixer": "^9.8.6",
         "eslint": "^7.22.0",
         "eslint-config-airbnb": "^18.2.1",
         "eslint-config-airbnb-base": "^14.2.1",
@@ -49,10 +51,12 @@
         "eslint-plugin-react": "^7.22.0",
         "eslint-plugin-react-hooks": "^4.2.0",
         "lint-staged": "^10.5.4",
+        "postcss": "^7.0.35",
         "prettier": "^2.2.1",
         "simple-git-hooks": "^2.2.0",
         "stylelint": "^13.12.0",
-        "stylelint-config-recommended": "^4.0.0"
+        "stylelint-config-recommended": "^4.0.0",
+        "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.4"
     },
     "simple-git-hooks": {
         "pre-commit": "cd web-app && npx lint-staged"
