--- a/web-app/package.json
+++ b/web-app/package.json
@@ -7,7 +7,11 @@
         "@testing-library/jest-dom": "^5.11.9",
         "@testing-library/react": "^11.2.5",
         "@testing-library/user-event": "^12.8.3",
+        "d3": "^6.6.1",
+        "lodash": "^4.17.21",
+        "moment": "^2.29.1",
         "react": "^17.0.1",
+        "react-d3-library": "^1.1.8",
         "react-dom": "^17.0.1",
         "react-scripts": "4.0.3",
         "react-three-fiber": "^5.3.20",
