--- a/web-app/package.json
+++ b/web-app/package.json
@@ -7,7 +7,7 @@
         "@testing-library/jest-dom": "^5.11.9",
         "@testing-library/react": "^11.2.5",
         "@testing-library/user-event": "^12.8.3",
-        "cal-heatmap": "github:wa0x6e/cal-heatmap",
+        "cal-heatmap": "^3.6.2",
         "d3": "^6.6.1",
         "lodash": "^4.17.21",
         "moment": "^2.29.1",
